[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[package]
name = "language"
version = "0.1.0"
edition = "2021"

[dependencies]
src-proc-macros = { path = "src-proc-macros" }

itertools = "0.13.0"

clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0.0"

anstream = "0.6.15"
anstyle = "1.0.8"

lazy_static = "1.5.0"
thread_local = "1.1.8"

bumpalo = { path = "bumpalo" }
string-interner = { path = "string-interner", features = ["inline-more"] }

unicode-properties = "0.1.2"
unicode-width = "0.1.11"

display_tree = "1.1.2"
rug = "1.26.1"

